--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">nativetempalte</string>
+    <string name="app_name">YOUR_APP_NAME_HERE</string>
 </resources>
